# oopzad

./: CMakeLists.txt
zad11and12/: main.cpp
zad1and2/: zad1.cpp
zad3and4/: zad3.cpp
zad5and6/: Canvas.cpp  Canvas.h  main.cpp  zad5.cpp
zad5and6/include/: Canvas.h
zad5and6/src/: Canvas.cpp
zad7and8/: book.cpp  book.h  main.cpp
zad9and10/: main.cpp
